<resources>
    <string name="app_name">WeatherForecastApplication</string>
    <string name="city_name">City Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Setting">Setting</string>
    <string name="favorites">Favorites</string>
    <string name="alarm">Alarm</string>
    <string name="wind">wind</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="weather_condition_format">Condition: %1$s</string>
    <string name="temperature_format">%1$d %2$s</string>
    <string name="wind_speed_format">%1$.1f %2$s</string>
    <string name="pressure_format">%1$d hPa</string> <!-- Integer -->
    <string name="humidity_format">%1$d %%</string>
    <string name="find_a_city">Find a City</string>
    <string name="pick_location">Pick Location</string>
    <string name="City_name">City name</string>
    <string name="setting">setting</string>
    <string name="language">language</string>
    <string name="temp_unit">temp_unit</string>
    <string name="location">location</string>
    <string name="wind_speed_unit">wind_speed_unit</string>
    <string name="loading">loading...</string>
    <string name="Units">Units</string>
    <string name="add_weather_alert">Add Weather Alert</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="delete_alarm">delete alarm</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="favorite_cities">Favorite Cities</string> <!-- Integer -->
    <string-array name="languages_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="temp_units_array">
        <item>metric</item>
        <item>standard</item>
        <item>imperial</item>
    </string-array>
    <string-array name="location_options_array">
        <item>GPS</item>
        <item>Map</item>
    </string-array>
    <string-array name="wind_speed_units_array">
        <item>Meter/sec</item>
        <item>Mile/hour</item>
    </string-array>
</resources>