<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_2"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alarmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alarmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>



    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_delete_24"
    android:background="@android:color/transparent"
    android:contentDescription="@string/delete_alarm"
    android:layout_marginStart="8dp" />  <!-- Margin for spacing -->
</LinearLayout>
