<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_1"

    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header Layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_2"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:padding="16dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/iconsettings" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
             />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/languages_array"
        android:textColor="@android:color/white"
        android:popupBackground="@android:color/darker_gray"
        android:layout_marginBottom="8dp" />

    <!-- Temperature Unit Setting -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Units"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/tempUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/temp_units_array"
        android:popupBackground="@android:color/darker_gray"
        android:layout_marginBottom="8dp" />

    <!-- Location Setting -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/location_options_array"
        android:popupBackground="@android:color/darker_gray"
        android:layout_marginBottom="8dp" />



</LinearLayout>