<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_1"
    android:orientation="vertical"
    tools:context=".home.view.HomeFragment">

    <!-- No Connection Banner -->
    <TextView
        android:id="@+id/noConnectionBanner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#808080"
        android:gravity="center"
        android:text="No Connection"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <!-- Error Layout for displaying errors and retry option -->
    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="Error occurred while fetching data"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retry" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/mainContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ProgressBar -->

            <!-- City Name -->
            <TextView
                android:id="@+id/text_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Date -->
            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_city_name"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingTop="4dp"
                android:text="@string/loading"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <!-- Weather Info Layout -->
            <LinearLayout
                android:id="@+id/weather_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_date"
                android:layout_margin="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_2"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Weather Condition Image -->
                <ImageView
                    android:id="@+id/image_weather_condition"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/cloudy_sunny" />

                <!-- Weather Condition -->
                <TextView
                    android:id="@+id/text_weather_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/loading"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_current_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/loading"
                    android:textColor="@android:color/white"
                    android:textSize="72sp"
                    android:textStyle="bold" />

                <!-- Info Layout for Wind, Pressure, and Humidity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <!-- Wind Info -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3333"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/windimage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/wind" />

                        <TextView
                            android:id="@+id/Windtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="-Km"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/WindValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <!-- Pressure Info -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3333"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pressureimage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/pressure_white1" />

                        <TextView
                            android:id="@+id/PressureValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="-hpa"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/Pressure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <!-- Humidity Info -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3333"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/humidityUnit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="-%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/Wind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/hourlyForecastHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weather_info_layout"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/hourly_forecast"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Hourly Forecast RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourlyForecastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hourlyForecastHeader"
                android:layout_margin="16dp"
                android:background="@drawable/background_2"
                android:paddingTop="24dp"
                tools:listitem="@layout/item_hourly_forecast" />

            <TextView
                android:id="@+id/dailyForecastHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hourlyForecastRecyclerView"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/daily_forecast"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Daily Forecast RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dailyForecastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dailyForecastHeader"
                android:layout_margin="16dp"
                android:background="@drawable/background_2"
                tools:listitem="@layout/item_daily_forecast" />

            <!-- Location Icon -->
            <ImageView
                android:id="@+id/locationimg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/text_city_name"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/baseline_location_pin_24" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
